--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -29,7 +29,7 @@ jobs:
 
 
       - name: Set up chart-testing
-        uses: helm/chart-testing-action@3.8.0
+        uses: helm/chart-testing-action@v3.8.0
 
       - name: Run chart-testing (list-changed)
         id: list-changed
