--- a/.github/ct.yaml
+++ b/.github/ct.yaml
@@ -2,4 +2,7 @@ remote: origin
 target-branch: main
 chart-dirs:
   - charts
+chart-repos:
+  - https://charts.bitnami.com/bitnami
+  - https://opensearch-project.github.io/helm-charts
 helm-extra-args: --timeout 800s
