--- a/.github/ct.yaml
+++ b/.github/ct.yaml
@@ -1,10 +1,9 @@
 remote: origin
 target-branch: main
 chart-dirs:
-  - charts/turbinia
-  - charts/timesketch
-  - charts/osdfir-infrastructure
+  - charts
 chart-repos:
   - https://charts.bitnami.com/bitnami
   - https://opensearch-project.github.io/helm-charts
 helm-extra-args: --timeout 800s
+check-version-increment: false
