--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -29,7 +29,9 @@ jobs:
 
 
       - name: Set up chart-testing
-        uses: helm/chart-testing-action@main
+        uses: helm/chart-testing-action@v2
+        with:
+          version: v3.8.0
 
       - name: Run chart-testing (list-changed)
         id: list-changed
