--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Run chart-testing (lint)
         if: steps.list-changed.outputs.changed == 'true'
-        run: ct lint --config .github/ct.yaml
+        run: ct lint --config .github/ct.yaml --debug
 
       - name: Create kind cluster
         if: steps.list-changed.outputs.changed == 'true'
