--- a/.github/ct.yaml
+++ b/.github/ct.yaml
@@ -1,5 +1,7 @@
+remote: origin
 target-branch: main
 chart-repos:
   - https://charts.bitnami.com/bitnami
   - https://opensearch-project.github.io/helm-charts
 check-version-increment: false
+helm-extra-args: --timeout 600s
