--- a/.github/ct.yaml
+++ b/.github/ct.yaml
@@ -1,8 +1,8 @@
 remote: origin
 target-branch: main
 chart-repos:
-  - https://charts.bitnami.com/bitnami
-  - https://opensearch-project.github.io/helm-charts
+  - bitnami=https://charts.bitnami.com/bitnami
+  - opensearch=https://opensearch-project.github.io/helm-charts
 chart-dirs:
   - charts
 check-version-increment: false
