--- a/charts/osdfir-infrastructure/Chart.yaml
+++ b/charts/osdfir-infrastructure/Chart.yaml
@@ -11,14 +11,23 @@ keywords:
 - cloud
 home: "https://github.com/google/osdfir-infrastructure"
 dependencies:
-- condition: timesketch.enabled
-  name: timesketch
-  repository: oci://us-docker.pkg.dev/osdfir-registry/osdfir-charts
-  version: 0.3.1
-- condition: turbinia.enabled
-  name: turbinia
-  repository: oci://us-docker.pkg.dev/osdfir-registry/osdfir-charts
-  version: 0.3.1
+  - condition: postgresql.enabled and timesketch.enabled
+    name: postgresql
+    version: 12.11.1
+    repository: https://charts.bitnami.com/bitnami
+  - condition: redis.enabled
+    name: redis
+    version: 18.0.4
+    repository: https://charts.bitnami.com/bitnami
+  - condition: opensearch.enabled and timesketch.enabled
+    name: opensearch
+    version: 2.14.1
+    repository: https://opensearch-project.github.io/helm-charts/
+  - condition: oauth2proxy.enabled
+    name: oauth2-proxy
+    alias: oauth2proxy
+    version: 4.1.3
+    repository: https://charts.bitnami.com/bitnami
 maintainers:
   - name: Wajih Yassine
     url: https://github.com/wajihyassine
