--- a/charts/osdfir-infrastructure/values.yaml
+++ b/charts/osdfir-infrastructure/values.yaml
@@ -582,3 +582,324 @@ turbinia:
       ## @param turbinia.oauth2proxy.redis.enabled Enable Redis for OAuth Session Storage
       ##
       enabled: false
+## @section Yeti configuration
+## The following section covers configuration parameters for Yeti
+##
+## @section Yeti frontend configuration
+##
+yeti:
+  enabled: true
+  frontend:
+    image:
+      ## @param frontend.image.repository Yeti frontend image repository
+      ##
+      repository: yetiplatform/yeti-frontend
+      ## @param frontend.image.pullPolicy Yeti image pull policy
+      ## ref https://kubernetes.io/docs/concepts/containers/images/#image-pull-policy
+      ##
+      pullPolicy: Always
+      ## @param frontend.image.tag Overrides the image tag whose default is the chart appVersion
+      ##
+      tag: latest
+    ## Service Parameters
+    ##
+    service:
+      ## @param frontend.service.type Yeti service type
+      ##
+      type: ClusterIP
+      ## @param frontend.service.port Yeti service port
+      ##
+      port: 80
+    ## @param frontend.podSecurityContext Holds pod-level security attributes and common server container settings
+    ## Some fields are also present in container.securityContext. Field values of container.securityContext take precedence over field values of PodSecurityContext
+    ## ref https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.27/#podsecuritycontext-v1-core
+    ## e.g.
+    ## fsgroup: 2000
+    ##
+    resources:
+      ## Example:
+      ## limits:
+      ##    cpu: 500m
+      ##    memory: 1Gi
+      limits: {}
+      ## Example:
+      ## requests:
+      ##    cpu: 500m
+      ##    memory: 1Gi
+      requests: {}
+  ## @section Yeti api configuration
+  ##
+  api:
+    image:
+      ## @param api.image.repository Yeti API image repository
+      ##
+      repository: yetiplatform/yeti
+      ## @param api.image.pullPolicy Yeti image pull policy
+      ## ref https://kubernetes.io/docs/concepts/containers/images/#image-pull-policy
+      ##
+      pullPolicy: Always
+      ## @param api.image.tag Overrides the image tag whose default is the chart appVersion
+      ##
+      tag: latest
+      ## @param api.image.imagePullSecrets Specify secrets if pulling from a private repository
+      ## ref https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
+      ## e.g.
+      ## imagePullSecrets:
+      ##   - myRegistryKeySecretName
+      ##
+      imagePullSecrets: []
+    ## Service Parameters
+    ##
+    service:
+      ## @param api.service.type Yeti service type
+      ##
+      type: ClusterIP
+      ## @param api.service.port Yeti service port
+      ##
+      port: 8000
+    ## Yeti api resource requests and limits
+    ## ref: https://kubernetes.io/docs/user-guide/compute-resources/
+    ## We leave the default resources as a choice for the user in order to increase
+    ## the chances charts run on environments with little resources, such as Minikube.
+    ## If you want to specify resources, uncomment the following lines, adjust them as
+    ## necessary, and remove the curly braces after 'resources:'.
+    ## @param api.resources.limits Resource limits for the API container
+    ## @param api.resources.requests Requested resources for the API container
+    resources:
+      ## Example:
+      ## limits:
+      ##    cpu: 500m
+      ##    memory: 1Gi
+      limits: {}
+      ## Example:
+      ## requests:
+      ##    cpu: 500m
+      ##    memory: 1Gi
+      requests:
+        cpu: 250m
+        memory: 256Mi
+  ## @section Yeti Tasks configuration
+  ##
+  tasks:
+    image:
+      ## @param tasks.image.repository Yeti tasks image repository
+      ##
+      repository: yetiplatform/yeti
+      ## @param tasks.image.pullPolicy Yeti image pull policy
+      ## ref https://kubernetes.io/docs/concepts/containers/images/#image-pull-policy
+      ##
+      pullPolicy: Always
+      ## @param tasks.image.tag Overrides the image tag whose default is the chart appVersion
+      ##
+      tag: latest
+      ## @param tasks.image.imagePullSecrets Specify secrets if pulling from a private repository
+      ## ref https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
+      ## e.g.
+      ## imagePullSecrets:
+      ##   - myRegistryKeySecretName
+      ##
+      imagePullSecrets: []
+    ## Yeti tasks resource requests and limits
+    ## ref: https://kubernetes.io/docs/user-guide/compute-resources/
+    ## We leave the default resources as a choice for the user in order to increase
+    ## the chances charts run on environments with little resources, such as Minikube.
+    ## If you want to specify resources, uncomment the following lines, adjust them as
+    ## necessary, and remove the curly braces after 'resources:'.
+    ## @param tasks.resources.limits Resource limits for the tasks container
+    ## @param tasks.resources.requests Requested resources for the tasks container
+    resources:
+      ## Example:
+      ## limits:
+      ##    cpu: 500m
+      ##    memory: 1Gi
+      limits: {}
+      ## Example:
+      ## requests:
+      ##    cpu: 500m
+      ##    memory: 1Gi
+      requests:
+        cpu: 250m
+        memory: 256Mi
+  ## @section Common Parameters
+  ## @param nameOverride String to partially override names.fullname
+  ##
+  nameOverride: ""
+  ## @param fullnameOverride String to fully override names.fullname
+  ##
+  fullnameOverride: ""
+  ## Service Account Parameters
+  ##
+  serviceAccount:
+    ## @param serviceAccount.create Specifies whether a service account should be created
+    ##
+    create: true
+    ## @param serviceAccount.annotations Annotations to add to the service account
+    ##
+    annotations: {}
+    ## @param serviceAccount.name The name of the service account to use
+    ## If not set and create is true, a name is generated using the fullname template
+    ##
+    name: "yeti"
+  ## Persistence Storage Parameters
+  ##
+  persistence:
+    ## @param persistence.name Yeti persistent volume name
+    ##
+    name: yetivolume
+    ## @param persistence.size Yeti persistent volume size
+    ##
+    size: 2Gi
+    ## @param persistence.storageClass PVC Storage Class for Yeti volume
+    ## If set to "-", storageClassName: "", which disables dynamic provisioning
+    ## If undefined or set to null, no storageClassName spec is
+    ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
+    ##   GKE, AWS & OpenStack)
+    ## ref https://kubernetes.io/docs/concepts/storage/dynamic-provisioning/#using-dynamic-provisioning
+    ##
+    storageClass: ""
+    ## @param persistence.accessModes PVC Access Mode for Yeti volume
+    ## Access mode may need to be updated based on the StorageClass
+    ## ref https://kubernetes.io/docs/concepts/storage/persistent-volumes/#access-modes
+    ##
+    accessModes:
+      - ReadWriteOnce
+  ## @section Third Party Configuration
+  ## This section contains all the main configuration for third party dependencies
+  ## Yeti requires to run
+  ##
+  ## @section Redis Configuration Parameters
+  ## IMPORTANT: Redis is deployed with Auth enabled by default
+  ## To see a full list of available values, run helm show values charts/redis*
+  ##
+  redis:
+    ## @param redis.enabled Enables the Redis deployment
+    ##
+    enabled: true
+    ## @param timesketch.redis.nameOverride Overrides the Redis deployment name
+    ## This is required since Turbinia and Timesketch also use Redis, we need to differentiate the instances.
+    ##
+    nameOverride: yeti-redis
+    ## Redis Authentication parameters
+    ##
+    auth:
+      ## @param redis.auth.enabled Enables Redis Authentication. Disabled due to incompatibility with Yeti
+      ##
+      enabled: false
+    ## @param redis.sentinel.enabled Enables Redis Sentinel on Redis pods
+    ## IMPORTANT: This has not been tested for Yeti so would leave this disabled
+    ##
+    sentinel:
+      enabled: false
+    ## Master Redis Service configuration
+    ##
+    master:
+      ## @param redis.master.count Number of Redis master instances to deploy (experimental, requires additional configuration)
+      ##
+      count: 1
+      ## Redis master persistence configuration
+      ##
+      persistence:
+        ## @param redis.master.persistence.size Redis master Persistent Volume size
+        ##
+        size: 2Gi
+      ## Redis master resource requests and limits
+      ## @param redis.master.resources.limits The resources limits for the Redis master containers
+      ## @param redis.master.resources.requests The requested resources for the Redis master containers
+      resources:
+        ## Example:
+        ## limits:
+        ##    cpu: 500m
+        ##    memory: 1Gi
+        limits: {}
+        ## Example:
+        ## requests:
+        ##    cpu: 500m
+        ##    memory: 1Gi
+        requests: {}
+    ## Redis replicas configuration parameters
+    ##
+    replica:
+      ## @param redis.replica.replicaCount Number of Redis replicas to deploy
+      ##
+      replicaCount: 0
+      ## Redis replicas service parameters
+      ##
+      service:
+        ## @param redis.replica.service.type Redis replicas service type
+        ##
+        type: ClusterIP
+        ## @param redis.replica.service.ports.redis Redis replicas service port
+        ##
+        ports:
+          redis: 6379
+      ## Redis replicas persistence configuration
+      ##
+      persistence:
+        ## @param redis.replica.persistence.size Redis replica Persistent Volume size
+        ##
+        size: 2Gi
+      ## Redis Replica resource requests and limits
+      ## @param redis.replica.resources.limits The resources limits for the Redis replica containers
+      ## @param redis.replica.resources.requests The requested resources for the Redis replica containers
+      resources:
+        ## Example:
+        ## limits:
+        ##    cpu: 500m
+        ##    memory: 1Gi
+        limits: {}
+        ## Example:
+        ## requests:
+        ##    cpu: 500m
+        ##    memory: 1Gi
+        requests: {}
+  ## @section Yeti Arangodb configuration
+  ##
+  arangodb:
+    image:
+      ## @param arangodb.image.repository Yeti arangodb image repository
+      ##
+      repository: arangodb
+      ## @param arangodb.image.pullPolicy Yeti image pull policy
+      ## ref https://kubernetes.io/docs/concepts/containers/images/#image-pull-policy
+      ##
+      pullPolicy: Always
+      ## @param arangodb.image.tag Overrides the image tag whose default is the chart appVersion
+      ##
+      tag: latest
+      ## @param arangodb.image.imagePullSecrets Specify secrets if pulling from a private repository
+      ## ref https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
+      ## e.g.
+      ## imagePullSecrets:
+      ##   - myRegistryKeySecretName
+      ##
+      imagePullSecrets: []
+    ## Service Parameters
+    ##
+    service:
+      ## @param arangodb.service.type Yeti service type
+      ##
+      type: ClusterIP
+      ## @param arangodb.service.port Yeti service port
+      ##
+      port: 8529
+    persistece:
+      size: 2Gi
+    ## Yeti arangodb resource requests and limits
+    ## ref: https://kubernetes.io/docs/user-guide/compute-resources/
+    ## We leave the default resources as a choice for the user in order to increase
+    ## the chances charts run on environments with little resources, such as Minikube.
+    ## If you want to specify resources, uncomment the following lines, adjust them as
+    ## necessary, and remove the curly braces after 'resources:'.
+    ## @param arangodb.resources.limits Resource limits for the arangodb container
+    ## @param arangodb.resources.requests Requested resources for the arangodb container
+    resources:
+      ## Example:
+      ## limits:
+      ##    cpu: 500m
+      ##    memory: 1Gi
+      limits: {}
+      ## Example:
+      ## requests:
+      ##    cpu: 500m
+      ##    memory: 1Gi
+      requests: {}
