--- a/charts/osdfir-infrastructure/Chart.yaml
+++ b/charts/osdfir-infrastructure/Chart.yaml
@@ -19,6 +19,10 @@ dependencies:
   name: turbinia
   repository: oci://us-docker.pkg.dev/osdfir-registry/osdfir-charts
   version: 0.3.1
+- condition: yeti.enabled
+  name: yeti
+  repository: file://charts/yeti
+  version: 0.1.0
 maintainers:
   - name: Wajih Yassine
     url: https://github.com/wajihyassine
