--- a/.github/ct.yaml
+++ b/.github/ct.yaml
@@ -7,8 +7,7 @@ chart-repos:
   - kube-prometheus=https://prometheus-community.github.io/helm-charts
 chart-dirs:
   - charts
+  - charts/osdfir-infrastructure/charts
 check-version-increment: true
 validate-maintainers: false
 helm-extra-args: --timeout 800s
-excluded-charts:
- - osdfir-infrastructure
