--- a/charts/osdfir-infrastructure/charts/openrelik/templates/gcp/serviceaccount.yaml
+++ b/charts/osdfir-infrastructure/charts/openrelik/templates/gcp/serviceaccount.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.gcp.enabled }}
+{{- if or .Values.gcp.enabled .Values.config.enableServiceAccount }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
