--- a/charts/osdfir-infrastructure/charts/openrelik/templates/worker-deployment.yaml
+++ b/charts/osdfir-infrastructure/charts/openrelik/templates/worker-deployment.yaml
@@ -29,6 +29,9 @@ spec:
       hostNetwork: false
       hostIPC: false
       automountServiceAccountToken: false
+      {{- if $.Values.config.enableServiceAccount }}
+      serviceAccountName: openrelik
+      {{- end }}
       containers:
         - name: worker
           image: {{ .image | quote }}
