--- a/charts/osdfir-infrastructure/charts/openrelik/templates/frontend-deployment.yaml
+++ b/charts/osdfir-infrastructure/charts/openrelik/templates/frontend-deployment.yaml
@@ -21,6 +21,9 @@ spec:
       hostNetwork: false
       hostIPC: false
       automountServiceAccountToken: false
+      {{- if .Values.config.enableServiceAccount }}
+      serviceAccountName: openrelik
+      {{- end }}
       containers:
         - name: frontend
           image: "{{ .Values.frontend.image.repository }}:{{ .Values.frontend.image.tag }}"
@@ -40,6 +43,9 @@ spec:
               {{- else }}
               value: local
               {{- end }}
+            {{- if .Values.frontend.env }}
+              {{- toYaml .Values.frontend.env | nindent 12 }} 
+            {{- end }}
           volumeMounts:
             - mountPath: /mnt/openrelikvolume
               name: openrelikvolume
