--- a/charts/osdfir-infrastructure/charts/openrelik/templates/metrics-deployment.yaml
+++ b/charts/osdfir-infrastructure/charts/openrelik/templates/metrics-deployment.yaml
@@ -24,6 +24,9 @@ spec:
       hostNetwork: false
       hostIPC: false
       automountServiceAccountToken: false
+      {{- if .Values.config.enableServiceAccount }}
+      serviceAccountName: openrelik
+      {{- end }}
       initContainers:
         {{- include "openrelik.initContainer" . | nindent 8 }}
       containers:
@@ -37,6 +40,9 @@ spec:
                 secretKeyRef:
                     name: {{ .Release.Name }}-openrelik-secret 
                     key: redis-url
+          {{- if .Values.metrics.env }}
+            {{- toYaml .Values.metrics.env | nindent 12 }} 
+          {{- end }}
           ports:
             - containerPort: 8080
           resources:
