charts/timesketch add termination grace period for Timesketch pods and make Celery/Gunicorn parent process (#243)
* charts/timesketch add termination grace period for Timesketch pods, make celery parent process

* Add safe to evict annotation to Timesketch worker pods

--- a/charts/osdfir-infrastructure/charts/timesketch/templates/web-deployment.yaml
+++ b/charts/osdfir-infrastructure/charts/timesketch/templates/web-deployment.yaml
@@ -26,13 +26,14 @@ spec:
       hostNetwork: false
       hostIPC: false
       automountServiceAccountToken: false
+      terminationGracePeriodSeconds: {{ .Values.frontend.terminationGracePeriodSeconds }}
       initContainers:
       {{- include "timesketch.initContainer" . | nindent 8 }}
       containers:
         - name: frontend
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          command: ["/bin/sh", "-c", "gunicorn --bind 0.0.0.0:5000 --capture-output --log-level {{ .Values.config.logLevel }} --timeout {{ .Values.config.wsgiTimeout }} --workers {{ .Values.config.wsgiWorkers }} --limit-request-line {{ .Values.config.wsgiLimitRequestLine }} --max-requests 1000 --max-requests-jitter 100 timesketch.wsgi:application"]
+          command: ["/bin/sh", "-c", "exec gunicorn --bind 0.0.0.0:5000 --capture-output --log-level {{ .Values.config.logLevel }} --timeout {{ .Values.config.wsgiTimeout }} --workers {{ .Values.config.wsgiWorkers }} --limit-request-line {{ .Values.config.wsgiLimitRequestLine }} --max-requests 1000 --max-requests-jitter 100 timesketch.wsgi:application"]
           {{- if and (not .Release.IsUpgrade) .Values.config.createUser }}
           lifecycle:
             postStart:
