charts/{timesketch, yeti} Update timesketch version and env variable, update Yeti nginx config (#246)
* Add environment variable for structured logging for timesketch and fix yeti nginx body size

* Update version to latest release

--- a/charts/osdfir-infrastructure/charts/timesketch/templates/web-deployment-v3.yaml
+++ b/charts/osdfir-infrastructure/charts/timesketch/templates/web-deployment-v3.yaml
@@ -41,6 +41,8 @@ spec:
             - name: GOOGLE_APPLICATION_CREDENTIALS
               value: /etc/vertex/vertex-sa.json
             {{- end }}
+            - name: ENABLE_STRUCTURED_LOGGING
+              value: "true" 
           volumeMounts:
             - mountPath: /mnt/timesketchvolume
               name: timesketchvolume
