Gunicorn config for timesketch-web and timesketch-web-v3 entry commands (#247)
* Add gunicorn config to entrypoint commands for ts-web services

* increase version numbers

* adding lockfile

--- a/charts/osdfir-infrastructure/charts/timesketch/templates/web-deployment.yaml
+++ b/charts/osdfir-infrastructure/charts/timesketch/templates/web-deployment.yaml
@@ -33,7 +33,7 @@ spec:
         - name: frontend
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          command: ["/bin/sh", "-c", "exec gunicorn --bind 0.0.0.0:5000 --capture-output --log-level {{ .Values.config.logLevel }} --timeout {{ .Values.config.wsgiTimeout }} --workers {{ .Values.config.wsgiWorkers }} --limit-request-line {{ .Values.config.wsgiLimitRequestLine }} --max-requests 1000 --max-requests-jitter 100 timesketch.wsgi:application"]
+          command: ["/bin/sh", "-c", "exec gunicorn --bind 0.0.0.0:5000 -c /opt/venv/lib/python3.12/site-packages/timesketch/gunicorn.conf.py --capture-output --log-level {{ .Values.config.logLevel }} --timeout {{ .Values.config.wsgiTimeout }} --workers {{ .Values.config.wsgiWorkers }} --limit-request-line {{ .Values.config.wsgiLimitRequestLine }} --max-requests 1000 --max-requests-jitter 100 timesketch.wsgi:application"]
           {{- if and (not .Release.IsUpgrade) .Values.config.createUser }}
           lifecycle:
             postStart:
@@ -53,7 +53,7 @@ spec:
               value: /etc/vertex/vertex-sa.json
             {{- end }}
             - name: ENABLE_STRUCTURED_LOGGING
-              value: "true" 
+              value: "true"
           volumeMounts:
             - mountPath: /mnt/timesketchvolume
               name: timesketchvolume
