--- a/charts/osdfir-infrastructure/charts/timesketch/templates/web-deployment-v3.yaml
+++ b/charts/osdfir-infrastructure/charts/timesketch/templates/web-deployment-v3.yaml
@@ -33,7 +33,7 @@ spec:
         - name: frontend-v3
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          command: ["/bin/sh", "-c", "exec gunicorn --bind 0.0.0.0:5000 --capture-output --log-level {{ .Values.config.logLevel }} --timeout {{ .Values.config.wsgiTimeout }} --workers {{ .Values.config.wsgiWorkers }} --limit-request-line {{ .Values.config.wsgiLimitRequestLine }} --max-requests 1000 --max-requests-jitter 100 timesketch.wsgi:application"]
+          command: ["/bin/sh", "-c", "exec gunicorn --bind 0.0.0.0:5000 -c /opt/venv/lib/python3.12/site-packages/timesketch/gunicorn.conf.py --capture-output --log-level {{ .Values.config.logLevel }} --timeout {{ .Values.config.wsgiTimeout }} --workers {{ .Values.config.wsgiWorkers }} --limit-request-line {{ .Values.config.wsgiLimitRequestLine }} --max-requests 1000 --max-requests-jitter 100 timesketch.wsgi:application"]
           env:
             - name: TIMESKETCH_UI_MODE
               value: "v3"
@@ -42,7 +42,7 @@ spec:
               value: /etc/vertex/vertex-sa.json
             {{- end }}
             - name: ENABLE_STRUCTURED_LOGGING
-              value: "true" 
+              value: "true"
           volumeMounts:
             - mountPath: /mnt/timesketchvolume
               name: timesketchvolume
