charts/timesketch update uploads path and opensearch snapshots path (#249)

--- a/charts/osdfir-infrastructure/charts/timesketch/templates/init-configmap.yaml
+++ b/charts/osdfir-infrastructure/charts/timesketch/templates/init-configmap.yaml
@@ -68,7 +68,7 @@ data:
 
     # Set up upload folder
     sed -i 's#^UPLOAD_ENABLED = False#UPLOAD_ENABLED = True#' timesketch.conf
-    sed -i 's#^UPLOAD_FOLDER =.*#UPLOAD_FOLDER =  "/mnt/timesketchvolume"#' timesketch.conf
+    sed -i 's#^UPLOAD_FOLDER =.*#UPLOAD_FOLDER =  "/mnt/timesketchvolume/uploads"#' timesketch.conf
 
     # Update scenarios paths
     sed -i 's#^SCENARIOS_PATH =.*#SCENARIOS_PATH = "/etc/timesketch/scenarios.yaml"#' timesketch.conf
