--- a/charts/osdfir-infrastructure/charts/timesketch/templates/worker-deployment.yaml
+++ b/charts/osdfir-infrastructure/charts/timesketch/templates/worker-deployment.yaml
@@ -51,6 +51,9 @@ spec:
           volumeMounts:
             - mountPath: /mnt/timesketchvolume
               name: timesketchvolume
+            - mountPath: /mnt/timesketchvolume/uploads
+              name: timesketchvolume
+              subPath: uploads
             - mountPath: /etc/timesketch
               name: timesketch-configs
             {{- if .Values.opensearch.selfSigned }}
